--- a/grupp_24.html
+++ b/grupp_24.html
@@ -1,72 +1,84 @@
-<!DOCTYPE html>
-<html lang="en-GB">
+  <!DOCTYPE html>
+  <html lang="en-GB">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pluto</title>
-  <link rel="stylesheet" href="./css/grupp_24.css">
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pluto</title>
+    <link rel="stylesheet" href="./css/test.css">
+  </head>
 
-<body>
-  <header> 
-    <h1>PLUTO</h1>
-    <p class="header_paragraph">Named after the Roman God of the Underworld</p>
-    <img src="./img/pluto_2048.webp" alt="The top half of planet Pluto in colors of blue, cyan, white, cream
-    and rusty read">
-    <div class="planets">
-      <a href="https://en.wikipedia.org/wiki/Europa_(moon)" title="Read more about Europa on Wikipedia" 
-      target="_blank" rel="noopener noreferrer"><b>Europa</b></a>
-      <a href="https://en.wikipedia.org/wiki/Jupiter" title="Read more about Jupiter on Wikipedia" 
-      target="_blank" rel="noopener noreferrer"><b>Jupiter</b></a>
-      <a href="https://sv.wikipedia.org/wiki/Mars_(planet)" title="Read more about Mars on Wikipedia" 
-      target="_blank" rel="noopener noreferrer"><b>Mars</b></a>
-      <a href="grupp_24.html" title="Navigate to the Pluto webpage" 
-      target="_blank"><b>Pluto</b></a>
-      <a href="https://sv.wikipedia.org/wiki/Venus" title="Read more about Venus on Wikipedia" 
-      target="_blank" rel="noopener noreferrer"><b>Venus</b></a>
+  <body>
+    <header>
+      <div >
+        <h1>PLUTO</h1>
+        <p>Named after the Roman God of the Underworld</p>
+      </div>
+      <div id="two">
+        <img src="./img/pluto_2048.webp" alt="The top half of planet Pluto in colors of blue, cyan, white, cream
+            and rusty read">
+        <div id="three">
+          <a href="https://en.wikipedia.org/wiki/Europa_(moon)" title="Read more about Europa on Wikipedia"
+            target="_blank" rel="noopener noreferrer" class="four">Europa</a>
+          <a href="https://en.wikipedia.org/wiki/Jupiter" title="Read more about Jupiter on Wikipedia" target="_blank"
+            rel="noopener noreferrer" class="four">Jupiter</a>
+          <a href="https://sv.wikipedia.org/wiki/Mars_(planet)" title="Read more about Mars on Wikipedia" target="_blank"
+            rel="noopener noreferrer" class="four">Mars</a>
+          <a href="grupp_24.html" title="Navigate to the Pluto webpage" target="_blank" class="four">Pluto</a>
+          <a href="https://sv.wikipedia.org/wiki/Venus" title="Read more about Venus on Wikipedia" target="_blank"
+            rel="noopener noreferrer" class="four">Venus</a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <div id="twenty">
+      <div id="four">
+        <h2>Facts</h2>
+      </div>
+      <div id="five">
+        <div>
+          <h3>Pluto is one third water</h3>
+        <p>This is in the form of water ice which is more than 3 times as much<br>
+          water as in all the Earth’s oceans, the remaining two thirds are<br>
+          rock. Pluto’s surface is covered with ices, and has several<br>
+          mountain ranges,light and dark regions, and a scattering of craters.</p>
+        <h3>Pluto has been visited by one spacecraft</h3>
+        <p>The New Horizons spacecraft, which was launched in 2006, flew <br>
+          by Pluto on the 14th of July 2015 and took a series of images and <br>
+          other measurements. New Horizons is now on its way to the Kuiper <br>
+          Belt to explore even more distant objects.</p>
+        <h3>Pluto is the largest dwarf planet</h3>
+        <p>At one point it was thought this could be Eris. Currently the most <br>
+          accurate measurements give Eris an average diameter of 2,326 km <br>
+          with a margin of error of 12 km, while Pluto’s diameter is 2,372 km <br>
+          with a 2 km margin of error.</p>
+        </div>
+        <div>
+          <table>
+            <tr>
+              <td class="left">Diameter:</td>
+              <td>2372 km</td>
+            </tr>
+            <tr>
+              <td class="left">Orbit Period: </td>
+              <td>248 years</td>
+            </tr>
+            <tr>
+              <td class="left">Surface Temperature: </td>
+              <td>-229°C</td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </div>
-    
-  </header>
+    </main>
 
-  <main>
-    <h2>Facts</h2>
-    <h3>Pluto is one third water</h3>
-    <p>This is in the form of water ice which is more than 3 times as much
-      water as in all the Earth’s oceans, the remaining two thirds are rock.
-      Pluto’s surface is covered with ices, and has several mountain ranges,
-      light and dark regions, and a scattering of craters.</p>
-    <h3>Pluto has been visited by one spacecraft”</h3>
-    <p>The New Horizons spacecraft, which was launched in 2006, flew by
-      Pluto on the 14th of July 2015 and took a series of images and other
-      measurements. New Horizons is now on its way to the Kuiper Belt to
-      explore even more distant objects.</p>
-    <h3>Pluto is the largest dwarf planet</h3>
-    <p>At one point it was thought this could be Eris. Currently the most
-      accurate measurements give Eris an average diameter of 2,326 km with
-      a margin of error of 12 km, while Pluto’s diameter is 2,372 km with a 2
-      km margin of error.</p>
-    <table>
-      <tr>
-        <td class="left">Diameter: </td>
-        <td>2372 km</td>
-      </tr>
-      <tr>
-        <td class="left">Oribit Period: </td>
-        <td>248 years</td>
-      </tr>
-      <tr>
-        <td class="left">Surface Temperature: </td>
-        <td>-229°C</td>
-      </tr>
-    </table>
-  </main>
-  
-  <footer>
-    <a href="”https://en.wikipedia.org/wiki/Pluto" title="Read more about Pluto on Wikipedia" 
-    target="_blank" rel="noopener noreferrer">Pluto Wikipedia</a>
-  </footer>
-</body>
+    <footer>
+      <a href="https://en.wikipedia.org/wiki/Pluto" title="Read more about Pluto on Wikipedia" target="_blank"
+        rel="noopener noreferrer">Pluto Wikipedia</a>
+    </footer>
+  </body>
 
-</html>
+  </html>
