--- a/grupp_24.html
+++ b/grupp_24.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pluto</title>
-    <link rel="stylesheet" href="./css/test.css">
+    <link rel="stylesheet" href="./css/grupp_24.css">
   </head>
 
   <body>
