fixa vänstra sidan på headern

--- a/grupp_24.html
+++ b/grupp_24.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <div>
+    <div id="one">
       <h1>PLUTO</h1>
       <p>Named after the Roman God of the Underworld</p>
     </div>
@@ -41,7 +41,7 @@
       <p>This is in the form of water ice which is more than 3 times as much<br>
         water as in all the Earth’s oceans, the remaining two thirds are<br>
         rock. Pluto’s surface is covered with ices, and has several<br>
-        mountain ranges,light and dark regions, and a scattering of <br>
+        mountain ranges, light and dark regions, and a scattering of <br>
         craters.</p>
       <h3>Pluto has been visited by one spacecraft</h3>
       <p>The New Horizons spacecraft, which was launched in 2006, flew <br>
@@ -58,15 +58,15 @@
       <table>
         <tr>
           <td class="left">Diameter:</td>
-          <td>2372 km</td>
+          <td class="right">2372 km</td>
         </tr>
         <tr>
           <td class="left">Orbit Period: </td>
-          <td>248 years</td>
+          <td class="right">248 years</td>
         </tr>
         <tr>
           <td class="left">Surface Temperature: </td>
-          <td>−229°C</td>
+          <td class="right">−229°C</td>
         </tr>
       </table>
     </div>
